update doc swagger
